fixed submit, added loading screen, fixed dark mode cleaned up css and html a lil

--- a/Styles.css
+++ b/Styles.css
@@ -12,6 +12,10 @@ body {
     padding: 0;
 }
 
+.dark-mode{
+  background: radial-gradient(circle at 50% 20%, #042227 , #140d42);
+}
+
 footer {
   background-color: rgba(09, 219, 245, 0);
   border-radius: 1rem;
@@ -34,6 +38,10 @@ form {
   font-family: 'Trebuchet MS', sans-serif;
   font-weight: bold;
   color: #000000;
+}
+
+.aboutusdark{
+  color: #ffffff;
 }
 
 header {
@@ -122,4 +130,44 @@ h1 {
 
 .darkmode {
   color: #6a7fe3;
+}
+
+.loader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #333;
+  text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: large;
+  font-weight: bold;
+  transition: opacity 0.75s, visibility 0.75s;
+}
+
+
+.loader::after {
+    content: "";
+    width: 75px;
+    height: 75px;
+    border: 15px solid #ffffff;
+    border-top-color: #6a7fe3;
+    border-radius: 50%;
+    animation: loading 1s ease infinite;
+}
+
+.loader--hidden {
+  opacity: 0;
+  visibility: hidden;
+  
+}
+
+@keyframes loading {
+  from { transform: rotate(0turn)}
+  to { transform: rotate(1turn);}
+  
 }
